@@ -55,6 +55,7 @@ public enum Instruction {
     ORR(ORR_EXECUTOR, false, true, REGISTER, REGISTER, ROTATED_IMM_OR_REGISTER, SHIFT),
     EOR(EOR_EXECUTOR, false, true, REGISTER, REGISTER, ROTATED_IMM_OR_REGISTER, SHIFT),
     BIC(BIC_EXECUTOR, false, true, REGISTER, REGISTER, ROTATED_IMM_OR_REGISTER, SHIFT),
+    BFC(BFC_EXECUTOR, false, false, REGISTER, IMM, IMM, NULL),
 
     //Shifter
     LSL(LSL_EXECUTOR, false, true, REGISTER, REGISTER, ROTATED_IMM_OR_REGISTER, NULL),
